--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 NODE_ENV=development
+
+# database
+SQL_HOST=localhost
+SQL_PORT=3306
+SQL_USERNAME=root
+SQL_PASSWORD=123456
+SQL_DATABASE_NAME=blog
