--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "joi": "^14.3.1",
+    "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
